--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
   </head>
   <body>
     <header>
-      <h2>Pokedex</h2>
+      <img id ="header-img" src="http://2.bp.blogspot.com/-UYWddUwOD3U/V4trsKHMrzI/AAAAAAAAACs/tPdekRzFiR4klyCbkNeZV2pIvttksaI1wCK4B/s1600/logo.png"/>
     </header>
 
-    <main>
-      <div id="test">
-      </div>
+    <main id="main-wrapper">
     </main>
 
     <script src="index.js"></script>
