--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
       <div id="hamburger-main">
         <span id="ham-span" style="font-size:30px;cursor:pointer">&#9776; Trainer</span>
       </div>
-     
+
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <p style="color:white;padding-left:10px;">Teams</p>
         <div id="teams"></div>
       </div>
-
     </header>
+
+    <div id="error-wrapper" class="hidden">
+      <div class="error-message">
+        <p id="error-holder"></p>
+      </div>
+    </div>
 
     <main id="main-wrapper">
     </main>
