--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <header>
-      <!-- <img id ="header-img" src="http://2.bp.blogspot.com/-UYWddUwOD3U/V4trsKHMrzI/AAAAAAAAACs/tPdekRzFiR4klyCbkNeZV2pIvttksaI1wCK4B/s1600/logo.png"/> -->
       <div id="hamburger-main">
-        <span id="ham-span" style="font-size:30px;cursor:pointer">&#9776; Trainer</span>
+          <span id="ham-span" style="font-size:30px;cursor:pointer">&#9776;</span>
+          <span class="trainer" style="font-size:30px;cursor:pointer">Trainer</span>
       </div>
-
+      
+      <img id ="header-img" src="https://fontmeme.com/permalink/190710/f87c04db0b54e3b89caa3d1d3ee405fb.png"/>
+      
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <p style="color:white;padding-left:10px;">Teams</p>
