added some styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header>
       <div id="hamburger-main">
-          <span id="ham-span" style="font-size:30px;cursor:pointer">&#9776;</span>
-          <span class="trainer" style="font-size:30px;cursor:pointer">Trainer</span>
+          <span id="ham-span" style="font-size:30px;cursor:pointer;color:rgb(46, 96, 180);">&#9776;</span>
+          <span class="trainer" style="font-size:30px;cursor:pointer;color:rgb(255,198,3);">Trainer</span>
       </div>
       
       <img id ="header-img" src="https://fontmeme.com/permalink/190710/f87c04db0b54e3b89caa3d1d3ee405fb.png"/>
