--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <header>
       <div id="hamburger-main">
           <span id="ham-span" style="font-size:30px;cursor:pointer;color:rgb(46, 96, 180);">&#9776;</span>
-          <span class="trainer">Trainer</span>
+          <span class="trainer" id="trainer-name"></span>
       </div>
-      
+
       <img id ="header-img" src="https://fontmeme.com/permalink/190710/f87c04db0b54e3b89caa3d1d3ee405fb.png"/>
-      
+
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <p style="color:white;padding-left:10px;">Teams</p>
@@ -21,9 +21,10 @@
       </div>
     </header>
 
-    <div id="error-wrapper" class="hidden">
-      <div class="error-message">
-        <p id="error-holder"></p>
+    <div id="error-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="modal-message"></p>
       </div>
     </div>
 
