--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <p style="color:white;padding-left:10px;">Teams</p>
+        <p style="color:white;padding-left:10px;cursor:pointer;">Teams</p>
         <div id="teams"></div>
       </div>
     </header>
