added delete account feature and abstracted a few nav functions

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <main id="main-wrapper">
     </main>
 
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
+    <script src="src/navFunctions.js"></script>
   </body>
 </html>
